# PixelPlanner

./: .gitignore  CMakeLists.txt
includes/: Task.hpp
src/: Task.cpp  main.cpp
